# Hephaestus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  __init__.py
docs/: approvals.md  architecture.md  benchmarks.md  brand.md  checkpoints.md  coding_loop_safety.md  contributor_guide.md  conversation.md  conversation_benchmarks.md  decision_engine.md  deepseek_v4_flash.md  deliberation_modes.md  demo_script.md  discussion_quality.md  experience_governance.md  github_setup.md  greenfield_coding_loop.md  learning_stack.md  live_provider_smoke.md  memory.md  model_adaptation_lab.md  model_provider_conversations.md  optimization.md  outcome_learning.md  pareto_optimization.md  personal_project_global_learning.md  policy.md  policy_learning.md  policy_profiles.md  product_positioning.md  provider_contract_hardening.md  public_launch_notes.md  qubo_ising.md  readme_reality_checklist.md  release_evidence.md  release_planning.md  repo_aware_coding_loop.md  repo_intelligence.md  research-notes.md  research_planning.md  (+24 more)
examples/: release_plan_demo.md  repo_release_demo.json
knowledge/: hephaestus_learning_stack_and_roadmap.md  hephaestus_phase_1_foundation.md  hephaestus_phase_2_persistence.md  hephaestus_phase_2b_benchmarks.md  hephaestus_phase_3a_decision_engine.md  hephaestus_phase_3b_outcome_learning.md  hephaestus_phase_3c_policy_learning.md  hephaestus_phase_3d_pareto.md  hephaestus_phase_3e_qubo.md  hephaestus_phase_4a_repo_intelligence.md  hephaestus_phase_4b_release_planning.md  hephaestus_phase_5_5a_studio_foundation.md  (+13 more)
(+329 files in other folders)
